RESOLVED FIXED310243
Back button unexpectedly enabled in newly opened tab
https://bugs.webkit.org/show_bug.cgi?id=310243
Summary Back button unexpectedly enabled in newly opened tab
Brady Eidson
Reported 2026-03-18 20:38:53 PDT
Back button unexpectedly enabled in newly opened tab
Attachments
Brady Eidson
Comment 1 2026-03-18 20:38:54 PDT
Brady Eidson
Comment 2 2026-03-19 11:21:00 PDT
Brady Eidson
Comment 3 2026-04-15 13:08:58 PDT
EWS
Comment 4 2026-04-20 13:17:27 PDT
Committed 311615@main (16dc6bfd11c1): <https://commits.webkit.org/311615@main> Reviewed commits have been landed. Closing PR #60910 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.